---
source: crates/ide/src/handlers/diagnostics.rs
expression: "check(\"class Foo : Foo;\")"
---
/main.td
class 'Foo' has cyclic inheritance
class Foo : Foo;
            ^^^
